# my-corporate-site

./: .eslintrc.json  .gitignore  AI_GA_YOMU_KYOU_IMPLEMENTATION.md  AI_GA_YOMU_KYOU_SETUP.md  BING_INDEX_RECOVERY_CHECKLIST.md  BING_MINIMUM_VIABLE_EXPERIMENT.md  BING_RECOVERY_STRATEGY.md  BING_URGENT_RECOVERY_ACTION_PLAN.md  BING_WEBMASTER_TOOLS_SETUP.md  CATALYST_AS_CHEMICAL_REACTION.md  CATALYST_RAG_ADDITION_GUIDE.md  DEEP_RESEARCH_FIX.md  DEPLOY_GUIDE.md  DM_FORM_IMPLEMENTATION.md  DOCKER_MCP_QUICK_START.md  DOCKER_NEXT_STEPS.md  ENV_RECOVERY_GUIDE.md  ENV_SETUP_DM_FORM.md  FIX_DOCKER_CREDENTIALS.md  FOUR_ELEMENTS_PERFECT_COORDINATION.md  GOOGLE_APPS_SCRIPT_SETUP.md  GOOGLE_APPS_SCRIPT_UPDATE.md  GRAFANA_SETUP.md  GRAFANA_SIMPLE_SOLUTION.md  HYBRID_SEARCH_DESIGN.md  HYBRID_SEARCH_FLOW.md  HYBRID_SEARCH_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DOCKER_DESKTOP.md  KENJI_HARADA_ARCHITECT_THOUGHT.md  MDX_IMPLEMENTATION_GUIDE.md  MEDIUM_VIDEO_PERSONAL_STORY_DESIGN.md  MIGRATION_EXECUTION_GUIDE.md  RAG_VISUALIZATION_PROPOSAL.md  README.md  REFACTORING_TASK_PLAN.md  RESTART_DEV_SERVER.md  SETUP_COMPLETE_GUIDE.md  SETUP_KENJI_RAG.md  SNS_AUTOMATION_MONETIZATION_STRATEGY.md  (+31 more)
services/linkedin-ml/: pyproject.toml  requirements.txt
services/linkedin-ml/linkedin_ml/: __main__.py  cli.py  config.py
services/linkedin-ml/linkedin_ml/features/: content_features.py  extractor.py  japanese_features.py  text_features.py
services/linkedin-ml/linkedin_ml/model/: baseline_generator.py  predictor.py  trainer.py
services/linkedin-ml/models/: baseline.json  baseline_meta.json
(+1649 files in other folders)
